# kollywood

./: .formatter.exs  .gitignore  .mise.toml  AGENTS.md  README.md  WORKFLOW.md  devenv.nix  mise.toml  mix.exs  pitchfork.toml  prd.json  process-compose.yaml
.kollywood/: AGENTS.md  WORKFLOW.md
.ralphi/: prd.json
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/deployment/: config-reference.md  systemd-postgres.md  topologies.md
lib/: kollywood.ex  kollywood_web.ex
lib/kollywood/: agent.ex  agent_harness.ex  agent_pool.ex  agent_runner.ex  app_mode.ex  application.ex  chat.ex  config.ex  orchestrator.ex  prd_json_archiver.ex  preview_session_manager.ex  project_repo_sync.ex  projects.ex  prompt_builder.ex  prompt_pipeline.ex  publisher.ex  recovery_guidance.ex  repo.ex  repo_sync.ex  run_attempts.ex  run_events.ex  run_queue.ex  run_worker.ex  runtime.ex  runtime_sessions.ex  service_config.ex  step_retry.ex  story_execution_overrides.ex  tracker.ex  version.ex  worker_consumer.ex  worker_node.ex  workflow_store.ex  workspace.ex
lib/kollywood_web/: endpoint.ex  router.ex  telemetry.ex
ops/docker/: postgres.compose.yml
ops/env/: kollywood-postgres.env.example  kollywood-server.env.example
ops/systemd/: kollywood-postgres.service.example  kollywood-server.service.example
test/: test_helper.exs
test/kollywood/: agent_harness_test.exs  agent_pool_test.exs  agent_runner_test.exs  agent_test.exs  app_mode_test.exs  (+22 more)
tools/kollywood-cli/: Cargo.toml  build.rs
tools/kollywood-cli/src/: main.rs
(+232 files in other folders)
