[package]
name = "kollywood-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for Kollywood story management"

[[bin]]
name = "kollywood"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
